--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>Document</title>
   </head>
   <body>
+    <header></header>
+    <div style="margin-bottom: 24px">sâsasacbdshkjf</div>
+    <div>djnsakdnksdnaks</div>
     <!--Bài tập
       thực hiện code đoạn html theo hình
       lưu ý:
@@ -18,6 +28,10 @@
       - màu chữ là màu đen
       ---- điểm cộng: phần responsive (không bắt buộc làm)
     -->
-    <img src="./assets/bai_tap_01.png" alt="bai_tap_01" />
+    <!-- <img src="./assets/bai_tap_01.png" alt="bai_tap_01" /> -->
+    <!-- <h1>6273648hjklasndf</h1>
+    <h2>62763728</h2> -->
+    <script src="./js/index.js"></script>
+    <footer></footer>
   </body>
 </html>
