hoan_hao change file html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
       ---- điểm cộng: phần responsive (không bắt buộc làm)
     -->
     <img src="./assets/bai_tap_01.png" alt="bai_tap_01" />
+    <h1>init git</h1>
   </body>
 </html>
