--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     -->
     <img src="./assets/bai_tap_01.png" alt="bai_tap_01" />
     <h1>init git</h1>
+    <h2>init </h2>
   </body>
 </html>
