update link img

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar">
           <!--logo-->
           <div class="navbar__logo">
-            <img src="./assets/images/logo.svg" alt="my logo" />
+            <img src="./assets/logo.svg" alt="my logo" />
           </div>
           <!--links-->
           <ul class="navbar__links">
@@ -42,7 +42,7 @@
       <div class="container">
         <!--banner-->
         <div class="banner__img">
-          <img src="./assets/images/banner-img.png" alt="image of women" />
+          <img src="./assets/banner-img.png" alt="image of women" />
         </div>
         <!--heading-->
         <div class="banner__heading">
@@ -64,14 +64,14 @@
     <section id="things">
       <div class="container">
         <div class="things__dec">
-          <img src="./assets/images/things-dec-l.png" alt="dec left" />
+          <img src="./assets/things-dec-l.png" alt="dec left" />
         </div>
         <div class="things__dec">
-          <img src="./assets/images/things-dec-r.png" alt="dec left" />
+          <img src="./assets/things-dec-r.png" alt="dec left" />
         </div>
         <h2>Thing I Do</h2>
         <div class="things__item">
-          <img src="./assets/images/things-item-1.png" alt="image things 1" />
+          <img src="./assets/things-item-1.png" alt="image things 1" />
           <div class="things__item--heading">
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="things__item">
-          <img src="./assets/images/things-item-2.png" alt="image things 2" />
+          <img src="./assets/things-item-2.png" alt="image things 2" />
           <div class="things__item--heading">
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="things__item">
-          <img src="./assets/images/things-item-3.png" alt="image things 3s" />
+          <img src="./assets/things-item-3.png" alt="image things 3s" />
           <div class="things__item--heading">
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>
@@ -112,25 +112,25 @@
     <section id="works">
       <div class="container">
         <div class="things__dec">
-          <img src="./assets/images/things-dec-r.png" alt="dec left" />
+          <img src="./assets/things-dec-r.png" alt="dec left" />
         </div>
         <div class="things__dec">
-          <img src="./assets/images/things-dec-r.png" alt="dec left" />
+          <img src="./assets/things-dec-r.png" alt="dec left" />
         </div>
         <h2>Recent Works</h2>
         <div class="works__img">
           <div class="works__img--single">
-            <img src="./assets/images/work-1.png" alt="work-1" />
+            <img src="./assets/work-1.png" alt="work-1" />
           </div>
           <div class="works__img--single">
-            <img src="./assets/images/work-2.png" alt="work-2" />
+            <img src="./assets/work-2.png" alt="work-2" />
           </div>
 
           <div class="works__img--single">
-            <img src="./assets/images/work-3.png" alt="work-3" />
+            <img src="./assets/work-3.png" alt="work-3" />
           </div>
           <div class="works__img--single">
-            <img src="./assets/images/work-4.png" alt="work-4" />
+            <img src="./assets/work-4.png" alt="work-4" />
           </div>
         </div>
 
@@ -143,10 +143,10 @@
     <footer id="footer">
       <div class="container">
         <div class="things__dec">
-          <img src="./assets/images/things-dec-l.png" alt="dec left" />
+          <img src="./assets/things-dec-l.png" alt="dec left" />
         </div>
         <div class="footer__img">
-          <img src="./assets/images/footer-img.png" alt="footer" />
+          <img src="./assets/footer-img.png" alt="footer" />
         </div>
         <div class="footer__heading">
           <h1>Ready to make something amazing?</h1>
