--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/css/main2.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
     <header>
         <img src="./assets/images/logo.png" alt="Logo"/>
-        <div class="navigation">
+        <div class="nav">
+            <div>
+                
+            </div>
         </div>
     </header>
     <contain>
@@ -26,4 +29,4 @@
     </footer>
 </body>
 </html>
-<script src="./js/main2.js"></script>
+<script src="./js/main.js"></script>
