--- a/index.html
+++ b/index.html
@@ -7,71 +7,57 @@
     <title>Document</title>
   </head>
 </head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-<style>
 
-@media only screen and (max-width: 600px) {
-body {
-  background-color: rgb(158, 215, 234);
-}
-}
-.*{
-color: black;
-
-}
-.bt ul{
-
-float: right;isplay: flex;
-}
-.bt ul li{
-
-padding: 20px 20px;
-list-style-type: none;
-}
-.bt h1{
-text-align: center;
-}
-.img{
-float: left;
-
-}
-.text{
-
-float: right;
-display: block;
-width: 50%;
-
-}
-
-</style>
 <body>
-  <!--Bài tập
-    thực hiện code đoạn html theo hình
-    lưu ý:
-    _ hình ảnh thay thế dùng hình nào cũng được, không quá đen tối :3
-    - font size yêu cầu: 16 - 22,
-    - font family là Roboto
-    - Nút Detail khi nhấn sẽ trỏ về 1 trang web bất kì
-    - nột dung text lấy từ Lorem Ipsum,
-    - màu chữ là màu đen
-    ---- điểm cộng: phần responsive (không bắt buộc làm)
-  -->
-  <div class="bt">
-    <ul>
-      <li > <img class="img" src="EARTH.GIF" alt="" width="auto" height="auto/> </li>
-      <li class="text">
-       
-        <p> <h1>Lorem Ipsum là gì?</h1><br>
-          <h3> Ipsum chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker.</h3>
-        <br>
-        <a href="https://www.facebook.com/profile.php?id=100023019017099"> <input type="submit" value="Detail" width="30"></a>
-        </p>
-      </li>
-    </ul>
+  <div class="nav"> 
    
+        <ul> 
+   <li><a href="index.html">Profile</a></li>
+   <li><a href="project.html">Project</a></li>
+   <li><a href="login.html">Future</a></li>
+   <li><a href="loading.html">Hỗ Trợ</a></li>
+        </ul>
   </div>
+  <main>
+		<header>
+		<img class="img" src="anh.jpg">
+		<h1>@thanhdi721</h1>
+	</header>
+	<ul>
+		<li>
+			<a href="https://www.tiktok.com/@ptd_thanhdi721"> <img class="img" src="tiktok.png" style="
+    width: 30px;
+    height: 30px;
+    padding-bottom: 10px;"
+    >TikTok</a>
+		</li>
+        
+		<li>
+			<a href="https://www.facebook.com/profile.php?id=100023019017099"><img class="img" src="facebook.png"
+				style="
+    width: 30px;
+    height: 30px;
+    padding-bottom: 10px;"
+
+    >Facebook</a>
+		</li>
+
+		<li>
+			<a href="https://www.youtube.com/channel/UCXkaIbYdw9heSWiGDY8UFrA"><img class="img" src="youtube.png"
+				style="
+    width: 30px;
+    height: 30px;
+    padding-bottom: 10px;"
+
+    >Youtube</a>
+		</li>
+	</ul>
+	</main>
+	
  
 </body>
 </html>
