--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
         <ul> 
    <li><a href="index.html">Profile</a></li>
    <li><a href="project.html">Project</a></li>
-   <li><a href="login.html">Future</a></li>
+   <li><a href="future.html">Future</a></li>
    <li><a href="loading.html">Hỗ Trợ</a></li>
         </ul>
   </div>
@@ -28,7 +28,7 @@
             <p>
                 starting from April we have a project of sbsweb company about FRONT-END field,
                 by the end of May I will finish my project and hope to achieve good results
-                <a href="https://thanhdi721.000webhostapp.com/"><h3>CLICK HERE</h3></a>
+                <a href="https://thanhdi721.000webhostapp.com/"><h3 class="clickhere">CLICK HERE</h3></a>
             </p>
                 
         </div>
