--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ThanhDi721</title>
   </head>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -18,7 +18,7 @@
         <ul> 
    <li><a href="index.html">Profile</a></li>
    <li><a href="project.html">Project</a></li>
-   <li><a href="login.html">Future</a></li>
+   <li><a href="future.html">Future</a></li>
    <li><a href="loading.html">Hỗ Trợ</a></li>
         </ul>
   </div>
