--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <header>
         <img src="./assets/images/logo.png" alt="Logo"/>
-        <div class="nav">
-            <div>
-                
-            </div>
+        <div class="header__navBar">
+            <ul>
+               <li>Information</li>
+               <li>Work</li>
+               <li>Others Thing</li>
+            </ul>
         </div>
     </header>
     <contain>
@@ -24,7 +26,9 @@
         </section>
     </contain>
     <footer>
-        
+        <div class="socialContactBox">
+
+        </div>
 
     </footer>
 </body>
