--- a/index.html
+++ b/index.html
@@ -12,24 +12,52 @@
         <img src="./assets/images/logo.png" alt="Logo"/>
         <div class="header__navBar">
             <ul>
-               <li>Information</li>
-               <li>Work</li>
-               <li>Others Thing</li>
+               <li class="header__nar">Information</li>
+               <li class="header__nar">Work</li>
+               <li class="header__nar">Others Thing</li>
             </ul>
         </div>
     </header>
     <contain>
-        <section>
+        <section class="info">
             <div>
 
             </div>
         </section>
+        <section class="thingIDo">
+
+        </section>
+        <section class="recentWork">
+
+        </section>
+        <section class="littleAboutHobbit">
+
+        </section>
     </contain>
     <footer>
-        <div class="socialContactBox">
-
+        <div class="footer__contain">
+        <section class="footer__info">
+            <div>
+                <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
+                <div>
+                    <h5>Địa Chỉ</h5>
+                    <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
+                    <h5>Số Điện Thoại</h5>
+                    <p>0902914958 (Chính)</p>
+                    <p>0899204167 (Phụ)</p>
+                    <p>0126837943 (Dự Phòng)</p>
+                </div>
+            </div>
+        </section>
+        <section class="footer__socialContactBox">
+            <div class="">
+                <h2></h2>
+            </div>
+        </section>
+        <section class="footer__contactBox">
+            <H2></H2>
+        </section>
         </div>
-
     </footer>
 </body>
 </html>
