NamNH - fix code 18/04/23

--- a/TST_Portfolio.html
+++ b/TST_Portfolio.html
@@ -1,51 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
-    /> 
+    />
     <link rel="stylesheet" href="./css/TST_Portfolio.css" />
     <title>Tất Siêu Thành</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="page__01">
-        <ul class="navbar">
-            <li><a href="#HOME">HOME</a></li>
-            <li><a href="#ABOUT">ABOUT</a></li>
-            <li><a href="#WORK">WORK</a></li>
-            <li><a href="#BLOG">BLOCK</a></li>
-            <li><a href="#CONTACT">CONTACT</a></li>
-        </ul>
-        <div class="img-box">
-            <img src="./assets/images/captain.png" alt="Tất Siêu Thành" />
+      <ul class="navbar">
+        <li><a href="#HOME">HOME</a></li>
+        <li><a href="#ABOUT">ABOUT</a></li>
+        <li><a href="#WORK">WORK</a></li>
+        <li><a href="#BLOG">BLOCK</a></li>
+        <li><a href="#CONTACT">CONTACT</a></li>
+      </ul>
+      <div class="img-box">
+        <img src="./assets/images/captain.png" alt="Tất Siêu Thành" />
+      </div>
+      <h1 class="name">Tất Siêu Thành</h1>
+      <h1 class="carrier">___ I am a Embeeded Developer ___</h1>
+      <div class="social-media">
+        <div class="inkedin">
+          <a
+            href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"
+          ></a>
         </div>
-        <h1 class="name">Tất Siêu Thành</h1>
-        <h1 class="carrier">___ I am a Embeeded Developer ___</h1>
-        <div class="social-media">
-            <div class ="inkedin">
-                <a href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"></a>
-            </div> 
-            <div class ="github">
-                <a href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"></a>
-            </div>
-            <div class ="figma">
-                <a href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"></a>
-            </div>
-            <div class ="instagram">
-                <a href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"></a>
-            </div>
-            <div class ="dribbble">
-                <a href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"></a>
-            </div>
-            <div class="scrollDownLine"></div>
-            <div class="scrollDown"><a href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/">SCROLLDOWN</a></div>
+        <div class="github">
+          <a
+            href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"
+          ></a>
         </div>
+        <div class="figma">
+          <a
+            href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"
+          ></a>
+        </div>
+        <div class="instagram">
+          <a
+            href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"
+          ></a>
+        </div>
+        <div class="dribbble">
+          <a
+            href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"
+          ></a>
+        </div>
+        <div class="scrollDownLine"></div>
+        <div class="scrollDown">
+          <a
+            href="https://www.linkedin.com/onboarding/start/follow-recommendations/new/"
+            >SCROLLDOWN</a
+          >
+        </div>
+      </div>
     </section>
     <section class="page__02">tatsiruthanh</section>
     <section class="page__03">tatsiruthanh</section>
@@ -54,9 +69,9 @@
     <section class="page__06">tatsiruthanh</section>
 
     <script
-        src="https://kit.fontawesome.com/1c39565260.js"
-        crossorigin="anonymous"
+      src="https://kit.fontawesome.com/1c39565260.js"
+      crossorigin="anonymous"
     ></script>
     <script src="./js/TST_Portfolio.js"></script>
-</body>
+  </body>
 </html>
