--- a/index.html
+++ b/index.html
@@ -36,27 +36,24 @@
     </contain>
     <footer>
         <div class="footer__contain">
-        <section class="footer__info">
-            <div>
-                <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
-                <div>
-                    <h5>Địa Chỉ</h5>
-                    <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
-                    <h5>Số Điện Thoại</h5>
-                    <p>0902914958 (Chính)</p>
-                    <p>0899204167 (Phụ)</p>
-                    <p>0126837943 (Dự Phòng)</p>
+            <section class="footer__info">
+                    <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
+                    <div>
+                        <h5>Địa Chỉ</h5>
+                        <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
+                        <h5>Số Điện Thoại</h5>
+                        <p>0902914958 (Chính)</p>
+                        <p>0899204167 (Phụ)</p>
+                        <p>0126837943 (Dự Phòng)</p>
                 </div>
-            </div>
-        </section>
-        <section class="footer__socialContactBox">
-            <div class="">
+            </section>
+            <section class="footer__socialContactBox">
+                    <h2>Facebook</h2>
+                    <p>https://www.facebook.com/jonney.thuy/</p>
+            </section>
+            <section class="footer__contactBox">
                 <h2></h2>
-            </div>
-        </section>
-        <section class="footer__contactBox">
-            <H2></H2>
-        </section>
+            </section>
         </div>
     </footer>
 </body>
