NamNH - commit index.html

--- a/index.html
+++ b/index.html
@@ -5,59 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThanhDi721</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
   </head>
-</head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-<body>
-  <div class="nav"> 
-   
-        <ul> 
-   <li><a href="index.html">Profile</a></li>
-   <li><a href="project.html">Project</a></li>
-   <li><a href="future.html">Future</a></li>
-   <li><a href="loading.html">Hỗ Trợ</a></li>
-        </ul>
-  </div>
-  <main>
-		<header>
-		<img class="img" src="anh.jpg">
-		<h1>@thanhdi721</h1>
-	</header>
-	<ul>
-		<li>
-			<a href="https://www.tiktok.com/@ptd_thanhdi721"> <img class="img" src="tiktok.png" style="
-    width: 30px;
-    height: 30px;
-    padding-bottom: 10px;"
-    >TikTok</a>
-		</li>
-        
-		<li>
-			<a href="https://www.facebook.com/profile.php?id=100023019017099"><img class="img" src="facebook.png"
-				style="
-    width: 30px;
-    height: 30px;
-    padding-bottom: 10px;"
+  <body>
+    <div class="nav">
+      <ul>
+        <li><a href="index.html">Profile</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="future.html">Future</a></li>
+        <li><a href="#">Hỗ Trợ</a></li>
+      </ul>
+    </div>
+    <main>
+      <header>
+        <img class="img" src="anh.jpg" />
+        <h1>@thanhdi721</h1>
+      </header>
+      <ul>
+        <li>
+          <a href="https://www.tiktok.com/@ptd_thanhdi721">
+            <img
+              class="img"
+              src="tiktok.png"
+              style="width: 30px; height: 30px; padding-bottom: 10px"
+            />
+            TikTok
+          </a>
+        </li>
 
-    >Facebook</a>
-		</li>
+        <li>
+          <a href="https://www.facebook.com/profile.php?id=100023019017099">
+            <img
+              class="img"
+              src="facebook.png"
+              style="width: 30px; height: 30px; padding-bottom: 10px"
+            />
+            Facebook
+          </a>
+        </li>
 
-		<li>
-			<a href="https://www.youtube.com/channel/UCXkaIbYdw9heSWiGDY8UFrA"><img class="img" src="youtube.png"
-				style="
-    width: 30px;
-    height: 30px;
-    padding-bottom: 10px;"
-
-    >Youtube</a>
-		</li>
-	</ul>
-	</main>
-	
- 
-</body>
+        <li>
+          <a href="https://www.youtube.com/channel/UCXkaIbYdw9heSWiGDY8UFrA">
+            <img
+              class="img"
+              src="youtube.png"
+              style="width: 30px; height: 30px; padding-bottom: 10px"
+            />
+            Youtube
+          </a>
+        </li>
+      </ul>
+    </main>
+  </body>
 </html>
