--- a/index.html
+++ b/index.html
@@ -1,178 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/main.css" />
-    <title>My Portfolio</title>
-  </head>
-  <body>
-    <section id="overlay"></section>
-    <!--header-->
-    <header>
-      <div class="container">
-        <nav class="navbar">
-          <!--logo-->
-          <div class="navbar__logo">
-            <img src="./assets/images/logo.svg" alt="my logo" />
-          </div>
-          <!--links-->
-          <ul class="navbar__links">
-            <li class="navbar__link"><a href="#works">Work</a></li>
-            <li class="navbar__link"><a href="#things">About</a></li>
-            <li class="navbar__link"><a href="#works">Resume</a></li>
-            <a href="#footer"><button class="navbar__btn">Contact</button></a>
-          </ul>
-          <!--menu button-->
-          <div class="navbar__icons">
-            <div class="navbar__icon"></div>
-          </div>
-        </nav>
-      </div>
-    </header>
-
-    <section id="banner">
-      <div class="container">
-        <!--banner-->
-        <div class="banner__img">
-          <img src="./assets/images/banner-img.png" alt="image of women" />
-        </div>
-        <!--heading-->
-        <div class="banner__heading">
-          <h1>Hello, I am Lisa</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate a
-            est culpa soluta modi beatae unde incidunt dolorem placeat maiores?
-          </p>
-          <a href="#"><button class="banner__btn">View more</button></a>
-          <div class="banner__socials">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="things">
-      <div class="container">
-        <div class="things__dec">
-          <img src="./assets/images/things-dec-l.png" alt="dec left" />
-        </div>
-        <div class="things__dec">
-          <img src="./assets/images/things-dec-r.png" alt="dec left" />
-        </div>
-        <h2>Thing I Do</h2>
-        <div class="things__item">
-          <img src="./assets/images/things-item-1.png" alt="image things 1" />
-          <div class="things__item--heading">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
-              quo, consequatur maiores explicabo numquam doloribus mollitia quos
-              quibusdam iusto iste repudiandae eveniet facere, necessitatibus
-              consectetur quam velit aut minima voluptas.
-            </p>
-          </div>
-        </div>
-        <div class="things__item">
-          <img src="./assets/images/things-item-2.png" alt="image things 2" />
-          <div class="things__item--heading">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
-              quo, consequatur maiores explicabo numquam doloribus mollitia quos
-              quibusdam iusto iste repudiandae eveniet facere, necessitatibus
-              consectetur quam velit aut minima voluptas.
-            </p>
-          </div>
-        </div>
-        <div class="things__item">
-          <img src="./assets/images/things-item-3.png" alt="image things 3s" />
-          <div class="things__item--heading">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
-              quo, consequatur maiores explicabo numquam doloribus mollitia quos
-              quibusdam iusto iste repudiandae eveniet facere, necessitatibus
-              consectetur quam velit aut minima voluptas.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="works">
-      <div class="container">
-        <div class="things__dec">
-          <img src="./assets/images/things-dec-r.png" alt="dec left" />
-        </div>
-        <div class="things__dec">
-          <img src="./assets/images/things-dec-r.png" alt="dec left" />
-        </div>
-        <h2>Recent Works</h2>
-        <div class="works__img">
-          <div class="works__img--single">
-            <img src="./assets/images/work-1.png" alt="work-1" />
-          </div>
-          <div class="works__img--single">
-            <img src="./assets/images/work-2.png" alt="work-2" />
-          </div>
-
-          <div class="works__img--single">
-            <img src="./assets/images/work-3.png" alt="work-3" />
-          </div>
-          <div class="works__img--single">
-            <img src="./assets/images/work-4.png" alt="work-4" />
-          </div>
-        </div>
-
-        <div class="works__btn">
-          <a href="#"><button>View Works</button></a>
-        </div>
-      </div>
-    </section>
-
-    <footer id="footer">
-      <div class="container">
-        <div class="things__dec">
-          <img src="./assets/images/things-dec-l.png" alt="dec left" />
-        </div>
-        <div class="footer__img">
-          <img src="./assets/images/footer-img.png" alt="footer" />
-        </div>
-        <div class="footer__heading">
-          <h1>Ready to make something amazing?</h1>
-        </div>
-        <div class="footer__contact">
-          <a href="tel:01234567">
-            <i class="fa-solid fa-phone"></i>
-            <p>90-123-4557</p>
-          </a>
-          <a href="mailto:mail@example.com">
-            <i class="fa-regular fa-envelope"></i>
-            <p>mail@example.com</p>
-          </a>
-        </div>
-        <div class="banner__socials">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-        </div>
-      </div>
-    </footer>
-
-    <script
-      src="https://kit.fontawesome.com/1c39565260.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  jhfghdhgd
+</body>
 </html>
