--- a/index.html
+++ b/index.html
@@ -1,61 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/css/main.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <body>
     <header>
-        <img src="./assets/images/logo.png" alt="Logo"/>
-        <div class="header__navBar">
-            <ul>
-               <li class="header__nar">Information</li>
-               <li class="header__nar">Work</li>
-               <li class="header__nar">Others Thing</li>
-            </ul>
-        </div>
+      <img src="./assets/images/logo.png" alt="Logo" />
+      <div class="header__navBar">
+        <ul class="header__navBar--ul">
+          <li class="header__navBar--li">Information</li>
+          <li class="header__navBar--li">Work</li>
+          <li class="header__navBar--li">Others Thing</li>
+          <li class="header__navBar--li">Contact</li>
+        </ul>
+      </div>
     </header>
     <contain>
-        <section class="info">
-            <div>
-
-            </div>
-        </section>
-        <section class="thingIDo">
-
-        </section>
-        <section class="recentWork">
-
-        </section>
-        <section class="littleAboutHobbit">
-
-        </section>
+      <section class="info">
+        <div>
+          <h1>My Information</h1>
+          <h3>Name</h3>
+          <p>Phan Cao Thụy</p>
+          <h3>Birth</h3>
+          <p>11/30/1998</p>
+          <h3>Nickname</h3>
+          <p>Mizket - Mizt</p>
+        </div>
+      </section>
+      <section class="thingIDo">
+        <div>
+          <h1>What I Have Done</h1>
+          <p></p>
+        </div>
+      </section>
+      <section class="recentWork">
+        <div>
+          <h1>A Little More About My Recent Work</h1>
+          <p></p>
+        </div>
+      </section>
+      <section class="littleAboutHobbit">
+        <div>
+          <h1>My Hobbit</h1>
+          <p></p>
+        </div>
+      </section>
     </contain>
     <footer>
-        <div class="footer__contain">
-            <section class="footer__info">
-                    <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
-                    <div>
-                        <h5>Địa Chỉ</h5>
-                        <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
-                        <h5>Số Điện Thoại</h5>
-                        <p>0902914958 (Chính)</p>
-                        <p>0899204167 (Phụ)</p>
-                        <p>0126837943 (Dự Phòng)</p>
-                </div>
-            </section>
-            <section class="footer__socialContactBox">
-                    <h2>Facebook</h2>
-                    <p>https://www.facebook.com/jonney.thuy/</p>
-            </section>
-            <section class="footer__contactBox">
-                <h2></h2>
-            </section>
-        </div>
+      <div class="footer__contain">
+        <section class="footer__info">
+          <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
+          <div class="footer__info">
+            <h4>Địa Chỉ</h4>
+            <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
+            <h4>Số Điện Thoại</h4>
+            <p>0902914958 (Chính)</p>
+            <p>0899204167 (Phụ)</p>
+            <p>0126837943 (Dự Phòng)</p>
+          </div>
+        </section>
+        <section class="footer__socialContactBox">
+          <h3>Facebook</h3>
+          <a href="https://www.facebook.com/jonney.thuy/">Facebook</a>
+          <h3>YouTube</h3>
+          <a href="https://www.youtube.com/channel/UCGmMCTaSt8wkM80WFbv24FA"
+            >Youtube</a
+          >
+          <h3>TikTok</h3>
+          <a href="https://www.tiktok.com/@pink_mouze">TikTok</a>
+        </section>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
 <script src="./js/main.js"></script>
