--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main3.css" />
     <title>My Portfolio</title>
   </head>
   <body>
@@ -173,6 +173,6 @@
       src="https://kit.fontawesome.com/1c39565260.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/main3.js"></script>
   </body>
 </html>
