--- a/thanhduo92.html
+++ b/thanhduo92.html
@@ -15,7 +15,6 @@
             <a href="#skill">Skill</a>
             <a href="#project">Project</a>
             <a href="#contact">Contact</a>
-
         </nav>
         <div class="follow">
             <a href="#" class="fab fa-facebook-f"></a>
@@ -30,18 +29,42 @@
             <span>hi there</span>
             <h3>I am <span>Thanhduong92</span></h3>
             <p class="infor">
-                Tôi là sinh viên năm ba khoa điện tử - viễn thông
-                trường Khoa học Tự nhiên, Đại học quốc gia Thành
-                phố Hồ Chí Minh. Định hương tương lại của tôi là theo chuyên ngành
-                máy tính - hệ thống nhúng. 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quisquam inventore suscipit alias, blanditiis beatae vitae molestias sunt aliquam fuga repellat voluptatem nihil quas facere dolor sapiente, dolore, est eveniet?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate nobis sapiente delectus? Corporis eius expedita rerum est fugiat accusantium blanditiis dolores, reiciendis quidem, quisquam doloribus commodi. Odio, delectus. Unde, optio!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illo animi expedita commodi voluptatum suscipit non unde repudiandae. Non sed praesentium quos rem eos similique magni est accusamus eligendi ducimus. 
             </p>
             <a href="#contact" id="btn">Contact</a>
         </div>
-        <div class="image"></div>
+        <div class="image">
+            <img src="./assets/img/img-home.jpg" alt="">
+        </div>
     </section>
 
     <section class="skill" id="skill">
-
+        <div class="container">
+            <h2>My skill</h2>
+            <div class="thing-items">
+                <img src="./assets/img/html.png" alt="">
+                <div class="thing-items-heading">
+                    <h3>HTML</h3>
+                    <p></p>
+                </div>
+            </div>
+            <div class="thing-items">
+                <img src="./assets/img/css.png" alt="">
+                <div class="thing-items-heading">
+                    <h3>CSS</h3>
+                    <p></p>
+                </div>
+            </div>
+            <div class="thing-items">
+                <img src="./assets/img/jss.png" alt="">
+                <div class="thing-items-heading">
+                    <h3>JavaScript</h3>
+                    <p></p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="project" id="project">
