NamNH - format and fix code

--- a/index.html
+++ b/index.html
@@ -1,61 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/css/main.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <body>
     <header>
-        <img src="./assets/images/logo.png" alt="Logo"/>
-        <div class="header__navBar">
-            <ul>
-               <li class="header__nar">Information</li>
-               <li class="header__nar">Work</li>
-               <li class="header__nar">Others Thing</li>
-            </ul>
-        </div>
+      <img src="./assets/images/logo.png" alt="Logo" />
+      <div class="header__navBar">
+        <ul>
+          <li class="header__nar">Information</li>
+          <li class="header__nar">Work</li>
+          <li class="header__nar">Others Thing</li>
+        </ul>
+      </div>
     </header>
     <contain>
-        <section class="info">
-            <div>
-
-            </div>
-        </section>
-        <section class="thingIDo">
-
-        </section>
-        <section class="recentWork">
-
-        </section>
-        <section class="littleAboutHobbit">
-
-        </section>
+      <section class="info">
+        <div></div>
+      </section>
+      <section class="thingIDo"></section>
+      <section class="recentWork"></section>
+      <section class="littleAboutHobbit"></section>
     </contain>
     <footer>
-        <div class="footer__contain">
-            <section class="footer__info">
-                    <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
-                    <div>
-                        <h5>Địa Chỉ</h5>
-                        <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
-                        <h5>Số Điện Thoại</h5>
-                        <p>0902914958 (Chính)</p>
-                        <p>0899204167 (Phụ)</p>
-                        <p>0126837943 (Dự Phòng)</p>
-                </div>
-            </section>
-            <section class="footer__socialContactBox">
-                    <h2>Facebook</h2>
-                    <p>https://www.facebook.com/jonney.thuy/</p>
-            </section>
-            <section class="footer__contactBox">
-                <h2></h2>
-            </section>
-        </div>
+      <div class="footer__contain">
+        <section class="footer__info">
+          <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
+          <div>
+            <h5>Địa Chỉ</h5>
+            <p>50 Nguyễn Văn Tố, Phường Tân Thành, Quận Tân Phú</p>
+            <h5>Số Điện Thoại</h5>
+            <p>0902914958 (Chính)</p>
+            <p>0899204167 (Phụ)</p>
+            <p>0126837943 (Dự Phòng)</p>
+          </div>
+        </section>
+        <section class="footer__socialContactBox">
+          <h2>Facebook</h2>
+          <p>https://www.facebook.com/jonney.thuy/</p>
+        </section>
+        <section class="footer__contactBox">
+          <h2></h2>
+        </section>
+      </div>
     </footer>
-</body>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
-<script src="./js/main.js"></script>
