NamNH - push homework

--- a/index.html
+++ b/index.html
@@ -14,24 +14,11 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
-    <div style="margin-bottom: 24px">sâsasacbdshkjf</div>
-    <div>djnsakdnksdnaks</div>
-    <!--Bài tập
-      thực hiện code đoạn html theo hình
-      lưu ý:
-      _ hình ảnh thay thế dùng hình nào cũng được, không quá đen tối :3
-      - font size yêu cầu: 16 - 22,
-      - font family là Roboto
-      - Nút Detail khi nhấn sẽ trỏ về 1 trang web bất kì
-      - nột dung text lấy từ Lorem Ipsum,
-      - màu chữ là màu đen
-      ---- điểm cộng: phần responsive (không bắt buộc làm)
-    -->
-    <!-- <img src="./assets/bai_tap_01.png" alt="bai_tap_01" /> -->
-    <!-- <h1>6273648hjklasndf</h1>
-    <h2>62763728</h2> -->
+    <a
+      href="https://www.figma.com/file/czYZ6RrkXMqAEG1LAllY8n/Whitepace---SaaS-Landing-Page-(Community)?node-id=5-34420&t=FhZ2kDmNpasjdSXZ-0"
+    >
+      Đường link figma</a
+    >
     <script src="./js/index.js"></script>
-    <footer></footer>
   </body>
 </html>
