--- a/thanhduo92.html
+++ b/thanhduo92.html
@@ -6,24 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myPortfolio</title>
     <link rel="stylesheet" href="css/thanhduo92.css">
+    <link rel="icon" type="image/x-icon" href="assets/img/img-favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-    <header>
+    <header>    
         <a href="#" class="logo"></a>
         <nav class="navar">
             <a href="#home">Home</a>
             <a href="#skill">Skill</a>
             <a href="#project">Project</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contact & Infor</a>
         </nav>
         <div class="follow">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-github"></a> 
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="#" ><i class="fab fa-facebook-f"></i></a>
+            <a href="#" ><i class="fab fa-github"></i></a> 
+            <a href="#" ><i class="fab fa-instagram"></i></a>
+            <a href="#" ><i class="fab fa-linkedin"></i></a>
         </div>
     </header>
-
     <section class="home" id="home">
         <div class="content">
             <span>hi there</span>
@@ -42,7 +43,7 @@
 
     <section class="skill" id="skill">
         <div class="container">
-            <h2>My skill</h2>
+            <h2>My skills</h2>
             <div class="thing-items">
                 <img src="./assets/img/html.png" alt="">
                 <div class="thing-items-heading">
@@ -68,15 +69,44 @@
     </section>
 
     <section class="project" id="project">
-
+        <div class="container">
+            <h2>My projects</h2>
+        </div>
     </section>
 
     <section class="contact" id="contact">
-
+        <h2>Contact & Infor</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt facere, quasi a, repudiandae obcaecati illum harum esse maiores voluptate, ad vel consequatur recusandae hic magni blanditiis tenetur qui nobis provident!</p>
+        <div class="box-container">
+            <div class="box">
+                <p>Họ và tên: thanhduo92</p>
+                <p>Ngày sinh: ###</p>
+                <p>Nghề nghiệp: Sinh Viên</p>
+            </div>
+            <div class="box">
+                <p>Số điện thoại: ###</p>
+                <p>Email: ###</p>
+            </div>
+        </div>
     </section>
 
-    <footer>
-
+    <footer id="footer">
+        <div class="contact2">
+            <a href="">
+                <i class="fa-solid fa-phone"></i>
+                <p>0389 958 802</p>
+            </a>
+            <a href="">
+                <i class="fa-regular fa-envelope"></i>
+                <p>email@gmail.com</p>
+            </a>
+        </div>
+        <div class="follow">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-github"></a> 
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+        </div>
     </footer>
 </body>
 </html>
