--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <img src="./assets/images/logo.png" alt="Logo" />
       <div class="header__navBar">
         <ul class="header__navBar--ul">
@@ -19,7 +19,7 @@
         </ul>
       </div>
     </header>
-    <contain>
+    <contain id="contain">
       <section class="info">
         <div>
           <h1>My Information</h1>
@@ -31,18 +31,21 @@
           <p>Mizket - Mizt</p>
         </div>
       </section>
+      
       <section class="thingIDo">
         <div>
           <h1>What I Have Done</h1>
           <p></p>
         </div>
       </section>
+
       <section class="recentWork">
         <div>
           <h1>A Little More About My Recent Work</h1>
           <p></p>
         </div>
       </section>
+
       <section class="littleAboutHobbit">
         <div>
           <h1>My Hobbit</h1>
@@ -50,7 +53,7 @@
         </div>
       </section>
     </contain>
-    <footer>
+    <footer id="footer">
       <div class="footer__contain">
         <section class="footer__info">
           <h2>Công ty trách nhiệm hữu hạn 1 thành viên Phan Cao Thụy</h2>
