--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My Portfolio</title>
+  <!-- box icons -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- custom css -->
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -11,13 +14,35 @@
   <header class="header">
     <a href="#" class="logo">Portfolio</a>
 
+    <i class='bx bx-menu-alt-left' id="menu-icon"></i>
+
     <nav class="navbar">
-        <a href="#home">Home</a>
+        <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
     </nav>
   </header>
+
+  <!-- home section design -->
+    <section class="home" id="home">
+      <div class="home-content">
+          <h3>Hello, It's me</h3>
+          <h1>Perfect</h1>
+          <h3>And I'm a <span>Freshman of HUFLIT university</span></h3>
+          <p>My strengths in programming include: 
+            programming skills, basic knowledge of c# language, 
+            data structures and algorithms, databases, seriousness and responsibility and most importantly ability to learn.</p>
+            <div class="social-media">
+              <a href="#"><i class='bx bxl-facebook'></i></a>
+              <a href="#"><i class='bx bx-envelope'></i></a>
+              <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+              <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            </div>
+            <a href="#" class="btn"></a>
+      </div>
+
+    </section>
 </body>
 </html>
