--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -1,43 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tất Siêu Thành</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/myPortfolio.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tất Siêu Thành</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Roboto+Mono:wght@100&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/myPortfolio.css" />
 
 </head>
+
 <body>
-    <section id="overlay"></section>
-    <header>
-        <div class="container">
-            <nav class="navbar">
-                 <!--logo-->
-                <div class="navbar__logo">
-                    <img src="./assets/myPortfoilo/smart_solution.gif" alt="my logo"   />
-                </div>
-                <!--links-->
-                <ul class="navbar__links">
-                    <li class="navbar__link"><a href="#works">Work</a></li>
-                    <li class="navbar__link"><a href="#things">About</a></li>
-                    <li class="navbar__link"><a href="#works">Resume</a></li>
-                    <a href="#footer"><button class="navbar__btn">Contact</button></a>
-                </ul>
-                <!--menu button-->
-            </nav>
-        </div>
-    </header>
+  <section id="Wrapper__home">
+    <div class="text--fullname">Tất Siêu Thành</div>
+    <div class="img-home"></div>
+    <ul>
+      <li><a href="#home">
+          <div class="text">Home</div>
+        </a></li>
+      <li><a href="#about">
+          <div class="text">About</div>
+        </a></li>
+      <li><a href="#work">
+          <div class="text">Work</div>
+        </a></li>
+      <li><a href="#active">
+          <div class="text">Active</div>
+        </a></li>
+      <li><a href="#contact">
+          <div class="text">Contact</div>
+        </a></li>
+    </ul>
+    <div class="text--name">I'm</div>
+    <div class="line--name">_____________</div>
+    <div class="box__content--intro">I'm an IoT developer with two years of experience.
+      I'm always looking for and eager to learn from real projects. For me technology is the future.</div>
+    <div class="box--service">My service</div>
+    <div class="box__content--service">
+      R&D solutions for iot projects, programming firmware for hardware devices, designing and drawing electrical
+      circuits, writing Web servers,...
+    </div>
+    <a href="#Skype">
+      <div class="skype"></div>
+    </a>
+    <a href="#Facebook">
+      <div class="facebook"></div>
+    </a>
+    <a href="#Github">
+      <div class="github"></div>
+    </a>
+    <a href="#Viber">
+      <div class="viber"></div>
+    </a>
+    <a href="#Linkedin">
+      <div class="linkedin"></div>
+    </a>
+  </section>
+  <section id="Wrapper__about">
 
-<!-- Tatsieuthanh -->
-
-    <script src="https://kit.fontawesome.com/0ad54b3611.js" crossorigin="anonymous"></script>
-    <script src="./js/myPortfolio.js"></script>
+  </section>
+  <script src="https://kit.fontawesome.com/0ad54b3611.js" crossorigin="anonymous"></script>
+  <script src="./js/myPortfolio.js"></script>
 </body>
+
 </html>
